--- a/bootstrap/templates/installing.html
+++ b/bootstrap/templates/installing.html
@@ -36,7 +36,7 @@
 
 <body>
     <div class="spinner"></div>
-    <h2>Configuring Kin OS...</h2>
+    <h2>Configuring Memu OS...</h2>
     <p>Please wait 30 seconds.</p>
     <p>We are securing your connection to <strong>{{ domain }}</strong></p>
 </body>
