--- a/bootstrap/templates/setup.html
+++ b/bootstrap/templates/setup.html
@@ -112,6 +112,12 @@
                 <input type="password" name="password" placeholder="Create a secure password" required>
             </div>
 
+            <div class="input-group">
+                <label>Cloudflare Tunnel Token</label>
+                <input type="text" name="cloudflare_token" placeholder="Paste your tunnel token (starts with ey...)"
+                    required>
+            </div>
+
             <button type="submit">Create My Home</button>
         </form>
     </div>
